--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,5 @@ pytest-flakes==0.2
 sphinx==1.2.1
 sphinxcontrib-issuetracker==0.11
 pudb==2013.5.1
+# required for ebs-volumes cleanup
+gevent==1.0.1
